# grok2api-edgelord

./: .gitignore  .opencode.json  CLAUDE.md  Dockerfile  README.md  config.defaults.toml  go-port-ledger.md  main.py  mihomo-xai.yaml  pyproject.toml  requirements.txt  upstream-sync-guide.md
.github/workflows/: branch-stacking-sync.yml  docker.yml  privoxy.yml
.omo/run-continuation/: ses_12c87dd16ffeRUmmKHxohTZGp2.json
app/api/v1/: chat.py  (+1 more)
app/core/: logger.py
app/platform/: errors.py
app/template/: admin.html
data/: results.db  setting.toml  token.json
docs/: README.en.md
scripts/: init_storage.sh
tests/: conftest.py  test_403_detection.py  test_account_cleanup.py  test_admin_batch_review_fixes.py  test_anthropic_messages.py  test_anthropic_router.py  test_api_endpoints.py  test_browser_fingerprint_integration.py  test_cf_clearance.py  test_cf_clearance_integration.py  test_cf_clearance_monitor.py  test_cf_queue_mechanism.py  test_client_disconnect.py  test_client_integration.py  test_cloudflare_solver.py  test_config.py  test_console_clearance_origin.py  test_console_status_feedback.py  test_data_403.json  test_headers_edge_cases.py  test_image_url.py  test_mihomo_integration.py  test_openai_format.py  test_prompt_cache.py  test_proxy_feedback.py  test_refresh_infer.py  test_regression.py  test_statsig_browser_fingerprint.py  test_statsig_id.py  test_token_403_auto_solve.py  test_token_manager_edge_cases.py  test_turnstile_integration.py  test_upstream_error_classify.py  test_upstream_error_feedback.py  test_upstream_error_metadata.py  test_xai_chat.py
(+69 files in other folders)
